deploy/src/objects/MDO_BrandPosition__c.object
<CustomObject>
    <description>store mdo brand positions master data</description>
    <fields>
        <fullName>IPM_Effective_from__c</fullName>
        <description>Date upon which a particular Brand Position is considered to take effect</description>
        <label>Effective_from</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IPM_Effective_to__c</fullName>
        <description>Date until which a specific Brand Position was considered</description>
        <label>Effective_to</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mdm_id__c</fullName>
        <description>store mdm id&apos;s</description>
        <externalId>true</externalId>
        <label>MDM ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>store status of brand position</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>BrandPosition</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BrandPosition</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>